tests/baselines/reference/multipleExportDefault2.errors.txt
multipleExportDefault2.ts(1,1): error TS2528: A module cannot have multiple default exports.
multipleExportDefault2.ts(5,25): error TS2528: A module cannot have multiple default exports.


==== multipleExportDefault2.ts (2 errors) ====
    export default {
    ~~~~~~~~~~~~~~~~
        uhoh: "another default",
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    };
    ~~
!!! error TS2528: A module cannot have multiple default exports.
!!! related TS2752 multipleExportDefault2.ts:5:25: The first export default is here.
    
    export default function Foo() { }
                            ~~~
!!! error TS2528: A module cannot have multiple default exports.
!!! related TS2753 multipleExportDefault2.ts:1:1: Another export default is here.
    
    